# llm-tools

./: .gitignore  AGENTS.md  Makefile  README.md  SECURITY_REVIEWS.md  SEC_TASKS.md  TASKS.md  pyproject.toml  vulture_whitelist.py
.codex/: config.toml
.codex/agents/: ci-adjudicator.toml  commit-message-writer.toml  correctness-review.toml  docs-keeper.toml  implementer.toml  lint-triager.toml  planner.toml  security-reviewer.toml  size-guard.toml  test-runner.toml
.codex/environments/: environment.toml
.github/workflows/: ci.yaml
.streamlit/: config.toml
docs/: ARCHITECTURE.md  CONTEXT.md  SPEC.md  TASKS.md  assistant-user-guide.md  dependency-purposes.toml  product_evaluation.md  security.md  system-design.md
docs/adr/: 0001-model-turn-protocol-module.md  0002-assistant-runtime-assembly-bundle.md  0003-provider-connection-configuration.md  0004-provider-auth-schemes.md  0004-skills-api-layer.md  0005-skill-context-contributions.md  0005-skills-api-layer.md  0006-skill-context-contributions.md  0007-layered-agent-framework-scope.md  0007-project-defaults-module.md  0008-layered-agent-framework-scope.md  0008-mechanically-enforced-layer-boundaries.md  0009-mechanically-enforced-layer-boundaries.md  0009-tool-runtime-mediation.md  0010-canonical-harness-state.md  0010-tool-runtime-mediation.md  0011-canonical-harness-state.md  0011-harness-fail-closed-recovery.md  0012-assistant-sqlcipher-persistence.md  0012-harness-fail-closed-recovery.md  0013-assistant-session-memory-credentials.md  0013-assistant-sqlcipher-persistence.md  0014-assistant-local-auth-default.md  0014-assistant-session-memory-credentials.md  0015-assistant-local-auth-default.md  0015-bundled-enterprise-read-integrations.md  0016-bundled-enterprise-read-integrations.md  0016-model-files-for-dead-code-maintenance.md  0017-model-files-for-dead-code-maintenance.md  0017-workflow-harness-boundary.md  0018-prompt-tools-as-supported-protocol.md  0018-workflow-harness-boundary.md  0019-prompt-tools-as-supported-protocol.md  0019-provider-transport-adapter-separation.md  0020-assistant-workbench-inspector-first.md  0020-provider-transport-adapter-separation.md  0021-assistant-workbench-inspector-first.md  0021-pydantic-contract-boundary.md  0022-pydantic-contract-boundary.md  0022-staged-structured-json-tool-use.md  (+31 more)
docs/agents/: domain.md  issue-tracker.md
docs/design/: README.md  architecture.md  assistant_app.md  harness_api.md  nicegui_chat.md  spec.md  sqlite_persistence.md
docs/extensions/: README.md
docs/implementation/: README.md  harness-app-integration-plan.md  harness-persistence-security-review.md  scope-audit.md  tasks.md  workflow-api-security-review-2026-04-19.md
docs/usage/: README.md  adapters.md  defining-tools.md  harness-sessions.md  policy.md  providers.md  registry-and-runtime.md  security-hardening.md  streamlit-assistant.md  streamlit-chat.md  textual-chat.md  workbench.md
examples/: README.md  async_model_turn.py  builtins_direct.py  minimal_tool.py  openai_live.py  openai_wiring.py  prompt_schema.py  structured_response.py
examples/assistant_configs/: enterprise-data-chat.yaml  harness-research-chat.yaml  local-only-chat.yaml
scripts/: check_coverage.py  generate_dependency_inventory.py
scripts/e2e_assistant/: common.py  run_backend_matrix.py  run_browser_smoke.py  run_gemini_agent_eval.py  run_ollama_agent_eval.py  run_ollama_skill_eval.py
src/llm_tools/: __init__.py
src/llm_tools/apps/: __init__.py  assistant_config.py  assistant_config_models.py  assistant_execution.py  assistant_prompts.py  assistant_runtime.py  (+14 more)
tasks/: extract-assistant-runtime-assembly.md  extract-model-turn-protocol.md
tasks/add-skills-support/: PRD.md
tests/: test_package_imports.py  test_tool_api_enums.py  test_tool_api_models.py  test_tool_contract.py  test_tool_policy.py  test_tool_runtime.py
tests/apps/: _imports.py  test_assistant_app.py  test_assistant_app_store.py  test_assistant_config_prompts.py  test_assistant_runtime.py  test_assistant_runtime_protection.py  test_chat_shared.py  test_controller.py  test_harness_cli.py  test_launch.py  test_nicegui_chat.py  test_nicegui_chat_store.py  test_presentation.py  test_protection_runtime.py  test_streamlit_assistant.py  test_streamlit_chat.py  test_textual_chat.py  test_textual_chat_coverage.py  test_textual_chat_extra.py  test_textual_workbench.py
tests/architecture/: __init__.py  _helpers.py  test_layering.py  test_model_file_boundaries.py  test_no_direct_tool_invocation.py  test_private_surface_hygiene.py  test_runtime_mediation.py  test_tool_contracts.py
tests/examples/: test_assistant_config_examples.py  test_examples_smoke.py
tests/harness_api/: test_context.py  test_harness_executor.py  test_harness_models.py  test_models.py  test_planning.py  test_protection_scrub.py  test_replay_golden.py  test_resume.py  test_session_additional_coverage.py  test_session_api.py  test_store.py  test_task_lifecycle.py  test_verification_models.py
tests/llm_adapters/: test_action_envelope.py  test_base.py  test_native_tool_calling.py  test_openai_tool_calling.py  test_prompt_schema.py  test_prompt_tools.py  test_structured_output.py  test_structured_responses.py
tests/llm_providers/: test_ask_sage_native.py  test_ollama_native.py  test_openai_compatible.py  test_openai_compatible_extra.py
tests/scripts/: test_backend_matrix.py  test_dependency_inventory.py  test_gemini_agent_eval.py  test_ollama_skill_eval.py
tests/skills_api/: test_skills_api.py
tests/tool_api/: test_execution.py  test_models.py  test_policy.py  test_redaction.py  test_registry.py  test_runtime.py  test_tool.py
tests/tools/: test_atlassian.py  test_chat.py  test_chat_helpers.py  test_chat_models_paths_extra.py  test_filesystem.py  test_git.py  test_gitlab.py  test_path_utils.py  test_project_reads.py  test_registration.py  test_runtime_integration.py  test_text.py
tests/workflow_api/: test_chat_models_extra.py  test_chat_session.py  test_executor.py  test_executor_additional.py  test_model_turn_protocol.py  test_protection.py  test_staged_structured.py
(+217 files in other folders)
