[build-system]
requires = ["setuptools>=82,<83", "wheel>=0.46,<0.47"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tools"
version = "0.1.0"
description = "Strict, typed tools for LLM and non-LLM Python applications."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "llm-tools Contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = [
  "instructor>=1,<2",
  "atlassian-python-api>=4,<5",
  "python-gitlab>=4,<6",
  "markitdown>=0.1.5,<0.2",
  "openai>=1,<2",
  "pydantic>=2,<3",
]

[project.scripts]
llm-tools-harness = "llm_tools.apps.harness_cli:main"
llm-tools-chat = "llm_tools.apps.textual_chat:main"
llm-tools-streamlit-chat = "llm_tools.apps.streamlit_chat:main"
llm-tools-streamlit-assistant = "llm_tools.apps.streamlit_assistant:main"
llm-tools-workbench = "llm_tools.apps.textual_workbench:main"

[project.optional-dependencies]
apps = [
  "PyYAML>=6,<7",
  "textual>=0.89.1,<1",
]
streamlit = [
  "PyYAML>=6,<7",
  "streamlit>=1.41,<2",
]
dev = [
  "PyYAML>=6,<7",
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "setuptools>=82,<83",
  "streamlit>=1.41,<2",
  "textual>=0.89.1,<1",
  "wheel>=0.46,<0.47",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_tools*"]

[tool.setuptools.package-data]
llm_tools = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py311"
respect-gitignore = true
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W", "C90", "D", "S", "ASYNC", "SIM", "N"]
ignore = ["D101", "D102", "D105", "D107", "D203", "D211", "D213", "E501", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101"]

[tool.ruff.lint.mccabe]
# Set the maximum cyclomatic complexity threshold (default is 10)
max-complexity = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
packages = ["llm_tools"]
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["textual", "textual.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["instructor"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gitlab"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
source = ["llm_tools"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
