[build-system]
requires = ["setuptools>=82,<83", "wheel>=0.46,<0.47"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tools"
dynamic = ["version"]
description = "Strict, typed tools for LLM and non-LLM Python applications."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "llm-tools Contributors" }]
urls = { Repository = "https://github.com/sportne/llm-tools", Issues = "https://github.com/sportne/llm-tools/issues" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = [
  "instructor>=1,<2",
  "atlassian-python-api>=4,<5",
  "argon2-cffi>=23,<26",
  "cryptography>=42,<47",
  "python-gitlab>=4,<6",
  "sqlcipher3-wheels>=0.5.7,<0.6",
  "markitdown>=0.1.5,<0.2",
  "mpxj>=16,<17",
  "openai>=1,<2",
  "nicegui>=3,<4",
  "pathspec>=0.12,<0.13",
  "pydantic>=2,<3",
  "PyYAML>=6,<7",
  "SQLAlchemy>=2.0,<2.1",
]

[project.scripts]
llm-tools-harness = "llm_tools.apps.harness_cli:main"
llm-tools-assistant = "llm_tools.apps.assistant_app:main"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "setuptools>=82,<83",
  "vulture>=2.16,<3",
  "wheel>=0.46,<0.47",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "llm_tools.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_tools*"]

[tool.setuptools.package-data]
llm_tools = ["py.typed", "skills_api/bundled/*/SKILL.md"]

[tool.ruff]
line-length = 88
target-version = "py311"
respect-gitignore = true
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W", "C90", "D", "S", "ASYNC", "SIM", "N"]
ignore = ["D101", "D102", "D105", "D107", "D203", "D211", "D213", "E501", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101"]

[tool.ruff.lint.mccabe]
# Set the maximum cyclomatic complexity threshold (default is 10)
max-complexity = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
packages = ["llm_tools"]
strict = true
warn_unused_configs = true
warn_unreachable = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["nicegui", "nicegui.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["instructor"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gitlab"]
ignore_missing_imports = true

[tool.vulture]
paths = ["src", "vulture_whitelist.py"]
exclude = ["*/models.py", "*_models.py"]
ignore_decorators = ["@ui.page", "@event.listens_for"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
xfail_strict = true

[tool.coverage.run]
source = ["llm_tools"]
branch = true
relative_files = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
